  Bug#13487 Japanese data inside a comment causes the syntax error mysql.cc:   Fixed not to copy multibyte characters to the   target string if we are inside a comment.